--- a/public/css/estilo copy.css
+++ b/public/css/estilo copy.css
@@ -2819,7 +2819,7 @@ html.fullscreen-bg, html.fullscreen-bg body, html.fullscreen-bg #wrapper {
 }
 
 .navbar-fixed-top .navbar-btn .logo {
-    width: 30px
+    width: 90px
 }
 
 @media screen and (max-width: 640px) {
@@ -3150,7 +3150,7 @@ html.fullscreen-bg, html.fullscreen-bg body, html.fullscreen-bg #wrapper {
 }
 
 .sidebar .navbar-brand .logo {
-    width: 30px
+    width: 180px
 }
 
 .sidebar .navbar-brand span {
@@ -6263,7 +6263,7 @@ ul.list-justify.large-number span {
 }
 
 .text-primary {
-    color: var(--primary-color)
+    color: #bea313
 }
 
 .text-info {
@@ -6330,37 +6330,42 @@ small {
 
 .bg-blush {
     background: #e4989a;
-    color: rgba(255, 255, 255, 0.7)
+    color: rgba(255, 255, 255, 0.7);
 }
 
 .bg-pink {
     background: #f66d9b;
-    color: rgba(255, 255, 255, 0.7)
+    color: rgba(255, 255, 255, 0.7);
 }
 
 .bg-indigo {
     background: #9367B4;
-    color: rgba(255, 255, 255, 0.7)
+    color: rgba(255, 255, 255, 0.7);
 }
 
 .bg-azura {
     background: #007FFF;
-    color: rgba(255, 255, 255, 0.7)
+    color: rgba(255, 255, 255, 0.7);
 }
 
 .bg-white {
     background: var(--white-color);
-    color: rgba(255, 255, 255, 0.7)
+    color: rgba(255, 255, 255, 0.7);
 }
 
 .bg-dark {
     background: #17191c;
-    color: rgba(255, 255, 255, 0.7)
+    color: rgba(255, 255, 255, 0.7);
 }
 
 .bg-cyan {
     background: #59C4BC;
-    color: rgba(255, 255, 255, 0.7)
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.bg-ventura {
+    background: #bea313 !important;
+    color: rgba(255, 255, 255, 0.7);
 }
 
 .text-info {
@@ -6409,6 +6414,14 @@ small {
 
 .text-dark {
     color: var(--dark-color)
+}
+
+.text-ventura {
+    color: #bea313 !important;
+}
+
+.text-cinza {
+    color:#444444;
 }
 
 .m-l--125 {
